--- a/app/src/main/res/layout/fragment_billing_third.xml
+++ b/app/src/main/res/layout/fragment_billing_third.xml
@@ -21,48 +21,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:max="100"
-                android:progress="80"
+                android:progress="100"
                 android:progressDrawable="@drawable/progressbar_horizontal_triangle"
                 />
-            <!--货物规格信息 -->
-
+            <!--付款方式 -->
             <LinearLayout
-                style="@style/BillingLayout">
+
+                style="@style/BillingLayout"
+                >
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/billing_item_height"
-                    android:gravity="center"
-                    android:paddingLeft="@dimen/billing_padding_left"
-                    >
-
-                    <TextView
-                        android:id="@+id/tv_goods_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/goods_name"
-                        android:textColor="@color/black_popwintext"
-                        android:textSize="@dimen/billing_text"
-                        />
-
-                    <ImageView
-                        android:id="@+id/iv_goods_name_manual"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/billing_padding_left"
-                        android:src="@mipmap/manual_input"
-                        />
-
-                </RelativeLayout>
-
-                <EditText
-                    android:id="@+id/edit_quantity"
-                    style="@style/BillingEditText"
-                    android:hint="@string/quantity"
-                    />
-
-                <RelativeLayout
+                    android:id="@+id/rl_payment_method"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/billing_item_height"
                     android:gravity="center"
@@ -71,21 +40,20 @@
                     >
 
                     <TextView
-                        android:id="@+id/tv_package_name"
+
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/package_name"
+                        android:text="@string/payment_method"
                         android:textColor="@color/black_popwintext"
                         android:textSize="@dimen/billing_text"
                         />
 
                     <ImageView
-                        android:id="@+id/iv_package_manual"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/billing_padding_left"
-                        android:src="@mipmap/manual_input"
+                        android:src="@mipmap/nextstep"
                         />
 
                 </RelativeLayout>
@@ -99,9 +67,9 @@
                     >
 
                     <EditText
-                        android:id="@+id/edit_weight"
+                        android:id="@+id/edit_pay"
                         style="@style/BillingEditText"
-                        android:hint="@string/weight_prompt"
+                        android:hint="@string/sum"
                         android:paddingLeft="0dp"
                         />
 
@@ -111,48 +79,76 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/billing_padding_left"
-                        android:text="@string/wight_measure"
+                        android:text="@string/yuan"
                         />
 
                 </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/billing_item_height"
-                    android:gravity="center"
-                    android:paddingLeft="@dimen/billing_padding_left"
-
-                    >
-
-                    <EditText
-                        android:id="@+id/edit_volume"
-                        style="@style/BillingEditText"
-                        android:hint="@string/volume_prompt"
-                        android:paddingLeft="0dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/billing_padding_left"
-                        android:text="@string/volume_measure"
-                        />
-
-                </RelativeLayout>
-
-                <EditText
-                    android:id="@+id/edit_specification"
-                    style="@style/BillingEditText"
-                    android:hint="@string/specification"
-                    />
             </LinearLayout>
-
-            <!--上面是货物规格信息，下面是货物保险信息 -->
+            <!--上付款方式，下费用 -->
             <LinearLayout
                 style="@style/BillingLayout"
-                android:layout_marginTop="12dp">
+                android:layout_marginTop="12dp"
+                >
+
+                <RelativeLayout
+                    android:id="@+id/rl_payment_other"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/billing_item_height"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/billing_padding_left"
+
+                    >
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/payment_other"
+                        android:textColor="@color/black_popwintext"
+                        android:textSize="@dimen/billing_text"
+                        />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/billing_padding_left"
+                        android:src="@mipmap/nextstep"
+                        />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/billing_item_height"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/billing_padding_left"
+
+                    >
+
+                    <EditText
+                        android:id="@+id/edit_pay_other"
+                        style="@style/BillingEditText"
+                        android:hint="@string/sum"
+                        android:paddingLeft="0dp"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/billing_padding_left"
+                        android:text="@string/yuan"
+                        />
+
+                </RelativeLayout>
+            </LinearLayout>
+            <!--上费用，下货款 -->
+            <LinearLayout
+                style="@style/BillingLayout"
+                android:layout_marginTop="12dp"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -163,7 +159,7 @@
                     >
 
                     <CheckBox
-                        android:id="@+id/checkbox_need_insurance"
+                        android:id="@+id/checkbox_need_cod"
                         style="@style/CustomCheckboxTheme"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -173,39 +169,24 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:text="@string/need_insurance"
+                        android:text="@string/cod"
                         android:textColor="@color/black_popwintext"
                         android:textSize="@dimen/billing_text"
                         />
 
-
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/billing_item_height"
-                    android:gravity="center"
-                    android:paddingLeft="@dimen/billing_padding_left"
+                <EditText
+                    android:id="@+id/edit_account_name"
+                    style="@style/BillingEditText"
+                    android:hint="@string/account_name"
+                    />
 
-                    >
-
-                    <EditText
-                        android:id="@+id/edit_value_goods"
-                        style="@style/BillingEditText"
-                        android:hint="@string/goods_value"
-                        android:paddingLeft="0dp"
-                        />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/billing_padding_left"
-                        android:text="@string/yuan"
-                        />
-
-                </RelativeLayout>
+                <EditText
+                    android:id="@+id/edit_bank_account"
+                    style="@style/BillingEditText"
+                    android:hint="@string/bank_account"
+                    />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -216,9 +197,9 @@
                     >
 
                     <EditText
-                        android:id="@+id/edit_value_insurance"
+                        android:id="@+id/edit_loan"
                         style="@style/BillingEditText"
-                        android:hint="@string/value_insurance"
+                        android:hint="@string/loan"
                         android:paddingLeft="0dp"
                         />
 
@@ -234,71 +215,44 @@
                 </RelativeLayout>
 
             </LinearLayout>
-            <!-- 运费 -->
-            <RelativeLayout
+            <!--上货款，下费用合计 -->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/billing_item_height"
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:paddingLeft="@dimen/billing_padding_left"
-                android:background="@color/white"
-                >
+                android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/edit_transport_fee"
-                    style="@style/BillingEditText"
-                    android:hint="@string/transport_fee"
-                    android:paddingLeft="0dp"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
+            </LinearLayout>
+            <!--上费用合计,下按钮-->
+            <LinearLayout
+                android:divider="@drawable/linear_layout_divider"
+                android:showDividers="beginning"
+                android:layout_gravity="bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/btn_save"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/billing_padding_left"
-                    android:text="@string/yuan"
+                    android:layout_weight="1"
+                    android:layout_marginTop="24dp"
+                    android:background="@color/white"
+                    android:text="@string/save"
+                    android:textColor="@color/black_popwintext"
+                    android:textSize="@dimen/top_text_20sp"
+                    />
+                <Button
+                    android:id="@+id/btn_confirm"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/shape_button_confilm"
+                    android:text="@string/confirm2"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/top_text_20sp"
                     />
 
-            </RelativeLayout>
-            <!-- 上面是运费，下面是确认添加 -->
-
-            <Button
-                android:id="@+id/btn_confirm"
-                android:layout_width="110dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="12dp"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/shape_button_myinfo"
-                android:text="@string/confirm_add"
-                android:textColor="@color/white"
-                android:textSize="@dimen/billing_text"
-                />
-            <!-- 楼上是确认添加，楼下是已添加的货物 -->
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="13dp"
-                android:layout_marginLeft="12dp"
-                android:text="@string/goods_add_already"
-                />
-            <!--楼上是已添加的货物，楼下是下一步按钮 -->
-            <Button
-                android:id="@+id/btn_next"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/shape_button_confilm"
-                android:text="@string/next"
-                android:textColor="@color/white"
-                android:textSize="@dimen/top_text_20sp"
-                />
-            <!--下一步按钮 -->
-
+            </LinearLayout>
         </LinearLayout>
-
     </ScrollView>
 
 </LinearLayout>
