--- a/app/src/main/res/drawable/progressbar_horizontal_triangle2.xml
+++ b/app/src/main/res/drawable/progressbar_horizontal_triangle2.xml
@@ -4,6 +4,7 @@
     <!-- 背景  gradient是渐变,corners定义的是圆角 -->
     <item android:id="@android:id/background">
         <shape>
+
             <solid android:color="#FFAD57"/>
         </shape>
     </item>
@@ -27,9 +28,13 @@
 
         <clip>
             <shape>
+                <corners
+                    android:topRightRadius="20dp"
+                    />
                 <solid android:color="#FE7C4A"/>
             </shape>
         </clip>
+
     </item>
 
 </layer-list>
