--- a/app/src/main/res/layout/fragment_myhome.xml
+++ b/app/src/main/res/layout/fragment_myhome.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray"
-    android:orientation="vertical"
-    android:weightSum="1">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/gray"
+              android:orientation="vertical"
+              android:weightSum="1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,10 +13,11 @@
         android:background="@color/basic_background_color"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
+
         <TextView
-            android:paddingTop="@dimen/margin_10dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingTop="@dimen/margin_10dp"
             android:text="@string/my"
             android:textColor="@color/white"
             android:textSize="@dimen/top_text_20sp"
@@ -26,31 +27,32 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="10dp"
         android:id="@+id/linearlayout_myinfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
         android:background="#fff"
-        android:layout_marginTop="20dp" >
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/iv_my_icon_small"
-            android:paddingLeft="10dp"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@mipmap/my_icon_small" />
+            android:paddingLeft="10dp"
+            android:src="@mipmap/my_icon_small"/>
 
         <RelativeLayout
-            android:paddingLeft="15dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp">
 
             <TextView
                 android:id="@+id/my_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="张三"
-                android:textColor="@color/black_popwintext" />
+                android:textColor="@color/black_popwintext"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,38 +60,39 @@
                 android:layout_toRightOf="@+id/my_name"
                 android:paddingLeft="20dp"
                 android:text="13812345678"
-                android:textColor="@color/black_popwintext" />
+                android:textColor="@color/black_popwintext"/>
 
             <RatingBar
-                android:paddingTop="10dp"
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/my_name"
-                android:rating="1" />
+                android:paddingTop="10dp"
+                android:rating="1"/>
 
             <LinearLayout
-                android:paddingLeft="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right">
+                android:gravity="right"
+                android:paddingLeft="10dp">
 
                 <ImageView
-                    android:paddingRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/nextstep" />
+                    android:paddingRight="10dp"
+                    android:src="@mipmap/nextstep"/>
             </LinearLayout>
         </RelativeLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:background="#ffffff"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
@@ -99,7 +102,7 @@
             android:paddingLeft="10dp"
             android:text="@string/aboutTC"
             android:textColor="@color/black_popwintext"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,28 +111,29 @@
 
             <ImageView
 
-                android:paddingRight="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/nextstep" />
+                android:paddingRight="10dp"
+                android:src="@mipmap/nextstep"/>
         </LinearLayout>
 
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
         <Button
 
             android:layout_width="270dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_button_logout"
-            android:text="@string/logout"
-            android:textColor="#ffffff"
-
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="74dp" />
+            android:layout_marginBottom="74dp"
+
+            android:background="@drawable/shape_button_logout"
+            android:text="@string/logout"
+            android:textColor="#ffffff"/>
     </RelativeLayout>
 </LinearLayout>
